--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@nextui-org/react": "^2.4.8",
     "@types/react-slick": "^0.23.13",
+    "emailjs-com": "^3.2.0",
     "i18next": "^23.16.0",
     "next": "14.2.15",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^15.0.3",
