--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@nextui-org/react": "^2.4.8",
     "@types/react-slick": "^0.23.13",
+    "cors": "^2.8.5",
     "emailjs-com": "^3.2.0",
     "i18next": "^23.16.0",
     "next": "14.2.15",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-fontawesome": "^1.6.8",
