--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.8",
     "@types/react-slick": "^0.23.13",
     "cors": "^2.8.5",
     "emailjs-com": "^3.2.0",
-    "i18next": "^23.16.0",
+    "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "3.0.1",
+    "react-hook-form": "^7.53.0",
     "react-i18next": "^15.0.3",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
