--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start",
     "lint": "next lint"
   },
-    "type":"module",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
@@ -20,21 +19,19 @@
     "@types/react-slick": "^0.23.13",
     "cors": "^2.8.5",
     "emailjs-com": "^3.2.0",
-    "i18next": "^23.16.1",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
-    "next-i18next": "^15.3.1",
     "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "3.0.1",
     "react-hook-form": "^7.53.0",
+    "react-i18next": "^15.0.3",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
-    "@types/i18next": "^13.0.0",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
