--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "emailjs-com": "^3.2.0",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
+    "next-intl": "^3.22.0",
     "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "3.0.1",
     "react-hook-form": "^7.53.0",
-    "react-i18next": "^15.0.3",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14"
